--- a/src/main/resources/Views/facturaStage.fxml
+++ b/src/main/resources/Views/facturaStage.fxml
@@ -688,7 +688,7 @@
                   <Font name="Times New Roman" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="95.0" layoutY="5.0" text="F#0000" textFill="WHITE">
+            <Label fx:id="lblNumeroFactura" layoutX="95.0" layoutY="5.0" text="F#0000" textFill="WHITE">
                <font>
                   <Font name="Times New Roman" size="15.0" />
                </font>
@@ -846,7 +846,7 @@
                         <Font name="Times New Roman" size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="126.0" layoutY="65.0" text="F#0000" textFill="WHITE">
+                  <Label fx:id="lblNumeroFacturaFinal" layoutX="126.0" layoutY="65.0" text="F#0000" textFill="WHITE">
                      <font>
                         <Font name="Times New Roman" size="15.0" />
                      </font>
