--- a/src/main/resources/Styles/styleDEMO.css
+++ b/src/main/resources/Styles/styleDEMO.css
@@ -178,4 +178,26 @@
     -fx-cursor: hand;
 }
 
+.menu-buttons {
+    -fx-background-color:
+            linear-gradient(#ffd65b, #e68400),
+            linear-gradient(#ffef84, #f2ba44),
+            linear-gradient(#ffea6a, #efaa22),
+            linear-gradient(#ffe657 0%, #f8c202 50%, #eea10b 100%),
+            linear-gradient(from 0% 0% to 15% 50%, rgba(255,255,255,0.9), rgba(255,255,255,0));
+    -fx-background-radius: 30;
+    -fx-background-insets: 0,1,2,3,0;
+    -fx-text-fill: #654b00;
+    -fx-font-weight: bold;
+    -fx-font-size: 14px;
+    -fx-padding: 10 20 10 20;
+}
 
+.menu-options {
+    -fx-background-color: linear-gradient(#fbe555 0%, #fb9224 50%, #f45905 75%, #b22222 100%);
+}
+
+.cancel-buttons:hover {
+    -fx-effect: dropshadow(three-pass-box, #9d4024, 5, 0.5, 0, 0);
+    -fx-cursor: hand;
+}
