--- a/src/main/resources/Views/mainStage.fxml
+++ b/src/main/resources/Views/mainStage.fxml
@@ -80,6 +80,15 @@
                   <MaterialDesignIconView glyphName="ACCOUNT" styleClass="Icons" />
                </graphic>
             </Button>
+            <AnchorPane fx:id="anchorPaneNuevFacturaPromociones" layoutY="156.0" prefHeight="524.0" prefWidth="305.0" style="-fx-background-color: #252525;" visible="false">
+               <children>
+                  <ImageView fx:id="imgNuevaFactura" fitHeight="61.0" fitWidth="304.0" layoutX="1.0" layoutY="-30.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/imgNuevaFactura.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </left>
