--- a/src/main/resources/Views/mainStage.fxml
+++ b/src/main/resources/Views/mainStage.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTabPane?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -37,7 +39,7 @@
       </HBox>
    </top>
    <left>
-      <AnchorPane maxHeight="685.0" maxWidth="300.0" prefHeight="685.0" prefWidth="296.0" styleClass="navBar" BorderPane.alignment="CENTER">
+      <AnchorPane maxHeight="685.0" maxWidth="378.0" prefHeight="683.0" prefWidth="87.0" styleClass="navBar" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="99.0" fitWidth="261.0" layoutX="22.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -80,13 +82,56 @@
                   <MaterialDesignIconView glyphName="ACCOUNT" styleClass="Icons" />
                </graphic>
             </Button>
-            <AnchorPane fx:id="anchorPaneNuevFacturaPromociones" layoutY="156.0" prefHeight="524.0" prefWidth="305.0" style="-fx-background-color: #252525;" visible="false">
+            <AnchorPane fx:id="anchorPaneNuevFacturaPromociones" layoutY="156.0" prefHeight="525.0" prefWidth="286.0" style="-fx-background-color: #252525;" visible="false">
                <children>
                   <ImageView fx:id="imgNuevaFactura" fitHeight="61.0" fitWidth="304.0" layoutX="1.0" layoutY="-30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Images/imgNuevaFactura.png" />
                      </image>
                   </ImageView>
+                  <JFXTabPane layoutY="82.0" prefHeight="443.0" prefWidth="305.0">
+                     <tabs>
+                        <Tab text="Martes VIP">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fitHeight="403.0" fitWidth="307.0" pickOnBounds="true">
+                                       <image>
+                                          <Image url="@../Images/anuncioMartes.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </Tab>
+                        <Tab text="Jueves 2x1">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fitHeight="403.0" fitWidth="307.0" pickOnBounds="true">
+                                       <image>
+                                          <Image url="@../Images/anuncioJueves.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </Tab>
+                        <Tab text="Viernes estudiantes">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fitHeight="403.0" fitWidth="307.0" pickOnBounds="true">
+                                       <image>
+                                          <Image url="@../Images/AnuncioViernes.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </Tab>
+                     </tabs>
+                  </JFXTabPane>
                </children>
             </AnchorPane>
          </children>
